syntax = "proto3";

package crudapp.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/craigpastro/crudapp/internal/gen/api/v1";

service CrudAppService {
  rpc Create(CreateRequest) returns (CreateResponse) {}

  rpc Read(ReadRequest) returns (ReadResponse) {}

  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {}

  rpc Update(UpdateRequest) returns (UpdateResponse) {}

  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest {
  string user_id = 1;
  string data = 2;
}

message CreateResponse {
  string post_id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message ReadRequest {
  string user_id = 1;
  string post_id = 2;
}

message ReadResponse {
  string user_id = 1;
  string post_id = 2;
  string data = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ReadAllRequest {
  string user_id = 1;
}

message ReadAllResponse {
  repeated ReadResponse posts = 1;
}

message UpdateRequest {
  string user_id = 1;
  string post_id = 2;
  string data = 3;
}

message UpdateResponse {
  string post_id = 1;
  google.protobuf.Timestamp updated_at = 5;
}

message DeleteRequest {
  string user_id = 1;
  string post_id = 2;
}

message DeleteResponse {}
